Tweak appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ clone_script:
 build_script:
   # Generate a NuGet package version number.
   - echo %APPVEYOR_REPO_TAG%
-  - python3 ./version-number.py > PKG_VERSION.txt
+  - C:\Python34 CI\version-number.py > PKG_VERSION.txt
   - Set /P PKG_VERSION=<PKG_VERSION.txt
   - echo %PKG_VERSION%
 
