--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 version: 0.11.0.{build}
 
+image:
+  - Visual Studio 2015
+  - Visual Studio 2017
+
 assembly_info:
   patch: true
   file: AssemblyInfo.*
