--- a/manifest.json
+++ b/manifest.json
@@ -3281,11 +3281,23 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api/Flame.Ir.IrField.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api/Flame.Ir.IrField.html",
+          "hash": "hQCCuk6gCQ6/z1n0ZDcNpA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api/Flame.Ir.IrMember.yml",
       "output": {
         ".html": {
           "relative_path": "api/Flame.Ir.IrMember.html",
-          "hash": "wU2qAHXvuc5/1jXBXWFF8Q=="
+          "hash": "6snSu4xjzTxTYkXXmyKZsA=="
         }
       },
       "is_incremental": false,
@@ -3381,19 +3393,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Flame.Ir.html",
-          "hash": "sm8RZPaeEXRSZXIXeKeQQw=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/Flame.IrField.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/Flame.IrField.html",
-          "hash": "wYZLeGqKvLby2F7kaX8lPQ=="
+          "hash": "t1xLaOv9hKGHvOlG54XV/g=="
         }
       },
       "is_incremental": false,
@@ -4017,7 +4017,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Flame.html",
-          "hash": "AWbPe9Q9Gu7tKssikqSbeA=="
+          "hash": "7ABtpVM1a6Oh2miE10r47A=="
         }
       },
       "is_incremental": false,
@@ -4041,7 +4041,7 @@
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "dSqdSbxRZ/zBOkG6vrta1w=="
+          "hash": "irczhw4fohoNGf2qJfFilg=="
         }
       },
       "is_incremental": false,
